removed the sizes

--- a/python_hex.html
+++ b/python_hex.html
@@ -96,7 +96,7 @@
 
 <div class="container">
 
-  Below is an image of what the GUI looks like.
+  Below are images of what the board looks like. The pink line is automatically created between the red and blue hexes. You can click on the blue or red hexes to reposition them.
 
   <br />
   <br />
@@ -106,11 +106,15 @@
   <br />
   <br />
 
-  <img width="1000" src="/assets/images/hex_big.png">
-
+  <!-- <img width="1000" src="/assets/images/hex_big.png"> -->
+  A large size board.
+  <img src="/assets/images/hex_big.png">
+  <br />
   <br />
 
-  <img width="1000" src="/assets/images/hex_small.png">
+  A smaller size board.
+  <br />
+  <img src="/assets/images/hex_small.png">
 
 </div>
 
