--- a/pynance.html
+++ b/pynance.html
@@ -19,7 +19,7 @@
 
   <link rel="stylesheet" href="/assets/css/main.css">
   <link rel="canonical" href="http://localhost:4000/pynance.html">
-  <link rel="alternate" type="application/rss+xml" title="Josh Fernandes&#39; Project Homepage" href="/feed.xml">
+  <link rel="alternate" type="application/rss+xml" title="Josh Fernandes&#39; Python Finance" href="/feed.xml">
 
 
 </head>
