--- a/python_hex.html
+++ b/python_hex.html
@@ -69,6 +69,7 @@
     </main>
 
     <div id="footer"></div>
+<script src="//code.jquery.com/jquery-1.10.2.js"></script>
 <script>
 $(function(){
   $("#header").load("./assets/templates/header.html");
