added pynance header

--- a/python_hex.html
+++ b/python_hex.html
@@ -15,7 +15,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>Python Hex Board</title>
-  <meta name="description" content="This site will host updates to projects I work on, and will have a complete list of my publications.">
+  <meta name="description" content="This page explains the code for my Python based board game.">
 
   <link rel="stylesheet" href="/assets/css/main.css">
   <link rel="canonical" href="http://localhost:4000/python_hex.html">
@@ -68,7 +68,7 @@
       </div>
     </main>
 
-    <div id="footer"></div>
+<div id="footer"></div>
 <script src="//code.jquery.com/jquery-1.10.2.js"></script>
 <script>
 $(function(){
