--- a/pynance.html
+++ b/pynance.html
@@ -18,7 +18,7 @@
   <meta name="description" content="This page explains my Python financial balance code.">
 
   <link rel="stylesheet" href="/assets/css/main.css">
-  <link rel="canonical" href="http://localhost:4000/pynance.html">
+  <link rel="canonical" href="http://joshuamfernandes.com/pynance.html">
   <link rel="alternate" type="application/rss+xml" title="Josh Fernandes&#39; Python Finance" href="/feed.xml">
 
 
