--- a/python_hex.html
+++ b/python_hex.html
@@ -18,7 +18,7 @@
   <meta name="description" content="This page explains the code for my Python based board game.">
 
   <link rel="stylesheet" href="/assets/css/main.css">
-  <link rel="canonical" href="http://localhost:4000/python_hex.html">
+  <link rel="canonical" href="http://joshuamfernandes.com/python_hex.html">
   <link rel="alternate" type="application/rss+xml" title="Josh Fernandes&#39; Python Hexboard" href="/feed.xml">
 
 
