--- a/python_hex.html
+++ b/python_hex.html
@@ -68,14 +68,7 @@
       </div>
     </main>
 
-<div id="footer"></div>
-<script src="//code.jquery.com/jquery-1.10.2.js"></script>
-<script>
-$(function(){
-  $("#header").load("./assets/templates/header.html");
-  $("#footer").load("./assets/templates/footer.html");
-});
-</script>
+{% include footer.html %}
 
   </body>
 
