--- a/python_hex.html
+++ b/python_hex.html
@@ -1,4 +1,6 @@
-<!DOCTYPE html>
+---
+layout: page
+---
 <html lang="en">
 <link rel="apple-touch-icon" sizes="180x180" href="../assets/favicons/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="../assets/favicons/favicon-32x32.png">
