--- a/pynance.html
+++ b/pynance.html
@@ -1,4 +1,6 @@
-<!DOCTYPE html>
+---
+layout: page
+---
 <html lang="en">
 <link rel="apple-touch-icon" sizes="180x180" href="../assets/favicons/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="../assets/favicons/favicon-32x32.png">
@@ -9,25 +11,8 @@
 <meta name="msapplication-config" content="../assets/favicons/browserconfig.xml">
 <meta name="theme-color" content="#ffffff">
 
-  <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <title>Pynance</title>
-  <meta name="description" content="This page explains my Python financial balance code.">
-
-  <link rel="stylesheet" href="/assets/css/main.css">
-  <link rel="canonical" href="http://joshuamfernandes.com/pynance.html">
-  <link rel="alternate" type="application/rss+xml" title="Josh Fernandes&#39; Python Finance" href="/feed.xml">
-
-
-</head>
-
-
   <body>
 
-<div id="header"></div>
 
 
     <main class="page-content" aria-label="Content">
@@ -60,15 +45,6 @@
 
       </div>
     </main>
-
-    <div id="footer"></div>
-    <script src="//code.jquery.com/jquery-1.10.2.js"></script>
-    <script>
-    $(function(){
-      $("#header").load("./assets/templates/header.html");
-      $("#footer").load("./assets/templates/footer.html");
-    });
-    </script>
 
 
   </body>
