removed it all from hex

--- a/python_hex.html
+++ b/python_hex.html
@@ -1,41 +1,23 @@
 ---
-layout: page
+layout: default
 ---
 
+Below are images of what the board looks like. The pink line is automatically created between the red and blue hexes. You can click on the blue or red hexes to reposition them.
 
+<br />
+<br />
 
+<a href="https://github.com/jmfernandes/Python/blob/master/pyqt/hex.py">(Github Link)</a>
 
+<br />
+<br />
 
-    <main class="page-content" aria-label="Content">
-      <div class="wrapper">
+<!-- <img width="1000" src="/assets/images/hex_big.png"> -->
+A large size board.
+<img src="/assets/images/hex_big.png">
+<br />
+<br />
 
-
-<div class="container">
-
-  Below are images of what the board looks like. The pink line is automatically created between the red and blue hexes. You can click on the blue or red hexes to reposition them.
-
-  <br />
-  <br />
-
-  <a href="https://github.com/jmfernandes/Python/blob/master/pyqt/hex.py">(Github Link)</a>
-
-  <br />
-  <br />
-
-  <!-- <img width="1000" src="/assets/images/hex_big.png"> -->
-  A large size board.
-  <img src="/assets/images/hex_big.png">
-  <br />
-  <br />
-
-  A smaller size board.
-  <br />
-  <img src="/assets/images/hex_small.png">
-
-</div>
-
-      </div>
-    </main>
-
-
-</html>
+A smaller size board.
+<br />
+<img src="/assets/images/hex_small.png">
