changed relative url

--- a/pynance.html
+++ b/pynance.html
@@ -1,27 +1,15 @@
 ---
-layout: page
+layout: default
 ---
-    <main class="page-content" aria-label="Content">
-      <div class="wrapper">
+Below is an image of what the GUI looks like. All the numbers update in real time, and the total percent turns red if you are spending more than 100% of your budget.
 
-<div class="container">
+<br />
+<br />
 
-  Below is an image of what the GUI looks like. All the numbers update in real time, and the total percent turns red if you are spending more than 100% of your budget.
+<a href="https://github.com/jmfernandes/Python/blob/master/pyqt/finance.py">(Github Link)</a>
 
-  <br />
-  <br />
-
-  <a href="https://github.com/jmfernandes/Python/blob/master/pyqt/finance.py">(Github Link)</a>
-
-  <br />
-  <br />
+<br />
+<br />
 
 
-  <img src="/assets/images/pynance.png">
-
-</div>
-
-      </div>
-    </main>
-
-</html>
+<img src="/assets/images/pynance.png">
