changed image type in css

--- a/pynance.html
+++ b/pynance.html
@@ -12,4 +12,4 @@ Below is an image of what the GUI looks like. All the numbers update in real tim
 <br />
 
 
-<img src="/assets/images/pynance.png">
+<img alt="drawing" drawing src="/assets/images/pynance.png">
