--- a/python_hex.html
+++ b/python_hex.html
@@ -15,10 +15,10 @@ Below are images of what the board looks like. The pink line is automatically cr
 <!-- <img width="1000" src="/assets/images/hex_big.png"> -->
 A large size board.
 <br />
-<img src="/assets/images/hex_big.png">
+<img alt="drawing" src="/assets/images/hex_big.png">
 <br />
 <br />
 
 A smaller size board.
 <br />
-<img src="/assets/images/hex_small.png">
+<img alt="drawing" src="/assets/images/hex_small.png">
