changed criteria for adding page to nav link

--- a/projects/pynance.html
+++ b/projects/pynance.html
@@ -1,5 +1,6 @@
 ---
 permalink: /pynance/
+title: Pynance
 ---
 Below is an image of what the GUI looks like. All the numbers update in real time, and the total percent turns red if you are spending more than 100% of your budget.
 
