--- a/projects/python_hex.html
+++ b/projects/python_hex.html
@@ -1,5 +1,6 @@
 ---
 permalink: /python_hex/
+title: Hex Board
 ---
 Below are images of what the board looks like. The pink line is automatically created between the red and blue hexes. You can click on the blue or red hexes to reposition them.
 
